# Doomdepths

./: CMakeLists.txt
APP/: ascciArt.c  main.c  main.out  mylog.txt  test.out
APP/COMBAT/: combat.c  combat.h
APP/CONSUMABLE/: consumable.c  consumable.h
APP/DATABASE/: BDDControleur.c  BDDControleur.h  createDatabase.c  database.c  database.h  doomdepths.db
APP/DATABASE/BDDService/: consumableService.c  equipmentService.c  inventoryService.c  mapService.c  monsterService.c  playerService.c  spellService.c
APP/EQUIPMENT/: equipment.c  equipment.h
APP/GRID/: monster.c  monster.h
APP/INVENTORY/: inventory.c  inventory.h  inventoryMenu.c  inventoryMenu.h
APP/LOGGER/: logger.c  logger.h
APP/MAP/: map.c  map.h  test.out
APP/MESSAGE_RESOLVER/: messageResolver.c  messageResolver.h
APP/MONSTER/: monster.c  monster.h
APP/PLAYER/: player.c  player.h
APP/SHOP/: shop.c  shop.h
APP/SPELL/: spell.c  spell.h  spells.c  spells.h
APP/UTILS/: utils.c  utils.h
TEXT/: message-en.env  message-fr.env  message-fr.txt
TRANSLATIONS/: message-EN.env  message-FR.env
